--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "Validation d'un formulaire",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --config ./config/webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config config/webpack.config.js",
     "clean": "rm -rf config/dist",
-    "clean:all": "rm -rf config/dist node_modules package-lock.json"
+    "clean:all": "rm -rf config/dist node_modules package-lock.json",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
     "babel-polyfill": "^6.26.0",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
