--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "gameon-website-fr",
   "version": "1.0.0",
   "description": "Validation d'un formulaire",
-  "main": "index.js",
-  "type": "module",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "webpack serve --config ./config/webpack.config.js",
+    "start": "webpack serve --config config/webpack.config.js",
     "build": "webpack --config config/webpack.config.js",
     "clean": "rm -rf config/dist",
     "clean:all": "rm -rf config/dist node_modules package-lock.json",
